--- a/style.css
+++ b/style.css
@@ -59,3 +59,27 @@ label {
   position: relative;
   font-style: italic;
 }
+.navdesign {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navdesign a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Roboto", sans-serif;
+}
+
+.navdesign a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navdesign a.active {
+  background-color: #04aa6d;
+  color: white;
+}
