--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ label {
   position: relative;
   font-style: italic;
 }
-.navdesign {
+.navdesign,
+.navdesign1 {
   overflow: hidden;
   background-color: #333;
 }
@@ -73,13 +74,24 @@ label {
   font-size: 17px;
   font-family: "Roboto", sans-serif;
 }
+.navdesign1 a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Roboto", sans-serif;
+}
 
-.navdesign a:hover {
+.navdesign a:hover,
+.navdesign1 a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.navdesign a.active {
+.navdesign a.active,
+.navdesign1 a.active {
   background-color: #04aa6d;
   color: white;
 }
