--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+  font-family: "Roboto", sans-serif;
+}
+body {
+  background-image: url("bg.jfif");
+  background-size: cover;
+}
+
 .login {
   width: 382px;
   overflow: hidden;
@@ -22,8 +30,9 @@ label {
   padding-left: 8px;
 }
 
-.submit-btn {
-  width: 300px;
+.submit-btn,
+.r-btn {
+  width: 95%;
   height: 30px;
   border: none;
   border-radius: 17px;
@@ -31,16 +40,19 @@ label {
   color: yellow;
   background-color: black;
 }
+
 .container1 {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  text-align: center;
 }
 .split1 {
   flex-basis: 45%;
   display: flex;
   flex-direction: column;
   padding: 2%;
+  text-align: center;
 }
 .bg-blue {
   background: #15386394;
@@ -82,4 +94,111 @@ label {
 .navdesign a.active {
   background-color: #04aa6d;
   color: white;
+}
+.card,
+.card-group > .card + .card,
+.card-group > .card:not(:first-child):not(:last-child):not(:only-child) {
+  margin: 10px;
+  border-radius: 10px !important;
+  box-shadow: rgb(255 255 255) 0px 8px 0px 0px, rgb(0 0 0 / 30%) 0px 0px 8px;
+}
+.card-group {
+  display: flex;
+}
+.card-body ul {
+  padding-left: 10%;
+}
+.c-btn {
+  display: flex;
+  justify-content: center;
+}
+.c-btn a {
+  width: 100%;
+}
+.c-info {
+  height: 290px;
+}
+.c-con {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+#loading {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading lottie-player {
+  z-index: 100;
+}
+
+.label1,
+.input-field {
+  text-align: center;
+  clear: both;
+  float: left;
+  margin-right: 15px;
+}
+
+#Buy-Me {
+  width: 10%;
+  height: 30px;
+  border: none;
+  border-radius: 17px;
+  padding-left: 10px;
+  color: yellow;
+  background-color: black;
+}
+#purchase {
+  display: flex;
+  justify-content: center;
+  margin: 20 0 0 450px;
+  padding: 80px;
+  background: wheat;
+}
+.container2 {
+  text-align: center;
+  width: auto;
+  height: auto;
+  padding-top: 100px;
+}
+.button1 {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4caf50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button1:hover {
+  background-color: #3e8e41;
+}
+
+.button1:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+#p1,
+#demo,
+#ch1 {
+  display: flex;
+  justify-content: center;
 }
