--- a/style.css
+++ b/style.css
@@ -236,11 +236,17 @@ label {
   .login,
   .UserName,
   .Password,
-  .purchase,
-  .pic-con,
-  .piccolumn {
+  .purchase {
     flex-wrap: wrap;
     flex-direction: column;
     width: auto;
+  }
+  @media (max-width: 576px) {
+    .pic-con,
+    .piccolumn,
+    .picrow {
+      flex-direction: column;
+      display: flex;
+    }
   }
 }
