--- a/CSS/style.css
+++ b/CSS/style.css
@@ -183,6 +183,13 @@ label {
   height: auto;
   padding-top: 100px;
 }
+.r-con {
+  width: 382px;
+  overflow: hidden;
+  margin: auto;
+  padding: 0%;
+  background: transparent;
+}
 .button1 {
   display: inline-block;
   padding: 15px 25px;
